--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-binance-api",
-  "version": "0.12.5",
+  "name": "@lidobrea/node-binance-api",
+  "version": "0.13.0",
   "description": "Binance API for node https://github.com/jaggedsoft/node-binance-api",
   "main": "node-binance-api.js",
   "dependencies": {
