--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@liviudobrea/node-binance-api",
-  "version": "0.13.2",
+  "version": "0.13.3",
   "description": "Binance API for node https://github.com/jaggedsoft/node-binance-api",
   "main": "node-binance-api.js",
   "dependencies": {
     "async": "^3.1.0",
     "https-proxy-agent": "^3.0.1",
+    "json-bigint": "^1.0.0",
     "request": "^2.88.0",
     "socks-proxy-agent": "^4.0.2",
     "string-hash": "^1.1.3",
-    "json-bigint": "^1.0.0",
     "url": "^0.11.0",
     "ws": "^7.2.0"
   },
@@ -42,6 +42,7 @@
     "codacy-coverage": "^3.4.0",
     "codecov": "^3.6.1",
     "coveralls": "^3.0.7",
+    "dotenv": "^9.0.0",
     "eslint": "^6.6.0",
     "istanbul": "^0.4.5",
     "jsdoc": "^3.6.3",
