--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
     "mocha": "^6.2.2",
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^14.1.1"
+  },
+  "publishConfig": {
+    "registry":"https://npm.pkg.github.com/@liviudobrea"
   }
 }
