--- a/package.json
+++ b/package.json
@@ -3,28 +3,9 @@
   "version": "0.13.3",
   "description": "Binance API for node https://github.com/jaggedsoft/node-binance-api",
   "main": "node-binance-api.js",
-  "dependencies": {
-    "async": "^3.1.0",
-    "https-proxy-agent": "^3.0.1",
-    "json-bigint": "^1.0.0",
-    "request": "^2.88.0",
-    "socks-proxy-agent": "^4.0.2",
-    "string-hash": "^1.1.3",
-    "url": "^0.11.0",
-    "ws": "^7.2.0"
-  },
-  "scripts": {
-    "test": "mocha",
-    "test-debug": "mocha --inspect-brk",
-    "lint": "eslint -c .eslintrc.js node-binance-api.js test.js",
-    "cover": "istanbul cover _mocha --report lcovonly",
-    "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "codacy": "cat ./coverage/lcov.info | codacy-coverage -v",
-    "codecov": "codecov"
-  },
   "repository": {
     "type": "git",
-    "url": "git://github.com/liviudobrea/node-binance-api.git"
+    "url": "https://github.com/liviudobrea/node-binance-api.git"
   },
   "keywords": [
     "binance",
@@ -36,6 +17,25 @@
     "url": "https://github.com/jaggedsoft/node-binance-api/issues"
   },
   "homepage": "https://github.com/jaggedsoft/node-binance-api#readme",
+  "scripts": {
+    "test": "mocha",
+    "test-debug": "mocha --inspect-brk",
+    "lint": "eslint -c .eslintrc.js node-binance-api.js test.js",
+    "cover": "istanbul cover _mocha --report lcovonly",
+    "coveralls": "cat ./coverage/lcov.info | coveralls",
+    "codacy": "cat ./coverage/lcov.info | codacy-coverage -v",
+    "codecov": "codecov"
+  },
+  "dependencies": {
+    "async": "^3.1.0",
+    "https-proxy-agent": "^3.0.1",
+    "json-bigint": "^1.0.0",
+    "request": "^2.88.0",
+    "socks-proxy-agent": "^4.0.2",
+    "string-hash": "^1.1.3",
+    "url": "^0.11.0",
+    "ws": "^7.2.0"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-counter": "^1.0.0",
@@ -51,6 +51,6 @@
     "nyc": "^14.1.1"
   },
   "publishConfig": {
-    "@liviudobrea:registry":"https://npm.pkg.github.com"
+    "registry":"https://npm.pkg.github.com/liviudobrea"
   }
 }
