--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "node-binance-api.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/liviudobrea/node-binance-api.git"
+    "url": "https://github.com/liviudobrea/node-binance-api"
   },
   "keywords": [
     "binance",
