--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "node-binance-api.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/liviudobrea/node-binance-api"
+    "url": "git://github.com/liviudobrea/node-binance-api.git"
   },
   "keywords": [
     "binance",
@@ -51,6 +51,6 @@
     "nyc": "^14.1.1"
   },
   "publishConfig": {
-    "registry":"https://npm.pkg.github.com/liviudobrea"
+    "registry":"https://npm.pkg.github.com"
   }
 }
